style: hide scrollbar on screen 768 fix: remove keypress on screen 768

--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@
         display: none;
     }
 
+    .chat-box::-webkit-scrollbar{
+        display: none;
+    }
+
     .chat-box,
     .chat-input {
         margin: 6rem 0;
